borsh/tests/roundtrip/snapshots/tests__roundtrip__test_cow__cow_byte_slice.snap
---
source: borsh/tests/roundtrip/test_cow.rs
expression: encoded
---
[
    10,
    0,
    0,
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
]
