borsh/tests/roundtrip/snapshots/tests__roundtrip__test_cow__cow_slice_of_cow_str.snap
---
source: borsh/tests/roundtrip/test_cow.rs
expression: encoded
---
[
    2,
    0,
    0,
    0,
    18,
    0,
    0,
    0,
    102,
    105,
    114,
    115,
    116,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    105,
    110,
    112,
    117,
    116,
    19,
    0,
    0,
    0,
    115,
    101,
    99,
    111,
    110,
    100,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    105,
    110,
    112,
    117,
    116,
]
